# AH_web_dev

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 4b7a9b4b6d22_update_patient_and_record_constraints.py  789d53aa63c9_sync_models_from_app_models_init.py  b3f4e5d6a7c8_add_ai_analysis_constraints.py  e6b2f166c001_add_refresh_tokens_table.py
app/: Dockerfile  main.py
app/apis/: __init__.py  admin_users.py  ai_analyses.py  auth.py  dependencies.py  medical_record_reads.py  medical_records.py  patient_edit_delete.py  patients.py  practice_apies.py  practice_apis.py  users.py
app/core/: config.py
app/models/: __init__.py  ai_analysis_result.py  enums.py  medical_records.py  patients.py  refresh_tokens.py  users.py  xray_image.py
app/repositories/: __init__.py  admin_user_repository.py  ai_analysis_repository.py  auth_repository.py  medical_record_read_repository.py  medical_record_repository.py  patient_repository.py  user_repository.py
app/schemas/: __init__.py  admin_users.py  ai_analysis.py  auth.py  common.py  medical_record.py  patient.py  users.py
app/services/: __init__.py  admin_user_service.py  ai_analysis_service.py  auth_service.py  file_storage.py  patient_service.py  (+4 more)
docs/: 1일차_team_rules.md  2일차_git_branch_전략.md  3일차_db_migration.md  3일차_프로젝트_뜯어보기.md  4일차_USER_API_설계.md  5일차_환자관리_API_설계.md  6일차_폐렴예측_API_설계.md  6일차_폐렴예측_공통규칙.md  7일차_앱_실행화면.md
scripts/: seed_admin.py
static/: apis.js  app.js  index.html  pages.js  styles.css
tests/: test_ai_analysis.py
worker/: __init__.py  model.py
(+33 files in other folders)
