[project]
name = "ai-health-web-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncmy>=0.2.11",
    "cryptography>=46.0.6",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.135.3",
    "pyjwt>=2.10.1",
    "pydantic-settings>=2.13.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "uuid6>=2025.0.1",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "numpy>=2.5.1",
    "pillow>=12.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
